name:                simple-dsp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/archbung/simple-dsp#readme
license:             BSD3
license-file:        LICENSE
author:              Hizbullah Abdul Aziz
maintainer:          archbung@gmail.com
copyright:           2020 Hizbullah Abdul Aziz
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.DSP.Conv,
                       Foreign.Lua.Module.DSP
  build-depends:       base >= 4.7 && < 5
                     , hslua
  default-language:    Haskell2010

test-suite test-hslua
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-dsp.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , hslua
                     , simple-dsp
                     , tasty
                     , tasty-hunit
                     , tasty-lua

source-repository head
  type:     git
  location: https://github.com/archbung/simple-dsp
